[package]
name = "pect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.37.0", features = ["macros", "rt-multi-thread"]}
axum = "0.7.5"
tower-http = {version = "0.5.2", features=["full"]}
serde_json = { version = "1.0.116" }
serde = { version = "1.0.130", features = ["derive"] }
dotenvy = "0.15"


[dev-dependencies]
tower = "0.4.13"
http-body-util = "0.1.0"
